<package>
  <name>tu_turtlebot_description</name>
  <version>2.4.2</version>
  <description>
     turtlebot_description provides a complete 3D model of the TurtleBot for simulation and visualization. The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <license>Proprietary</license>
  <author>Kevin Nickels</author>
  <author email="knickels@trinity.edu">Dr Nickels</author>
  <maintainer email="knickels@trinity.edu">Dr Nickels</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>turtlebot_description</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
